--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -5303,5 +5303,16 @@
         <target>Umfrage löschen</target>
       </segment>
     </unit>
+    <unit id="elZ0zxc" name="Liste vergangener Namen löschen">
+      <notes>
+        <note category="german">Liste vergangener Namen löschen</note>
+        <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Liste vergangener Namen löschen</source>
+        <target>Liste vergangener Namen löschen</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
