--- a/translations/admin+intl-icu.en.xlf
+++ b/translations/admin+intl-icu.en.xlf
@@ -5298,5 +5298,15 @@
         <target>Delete survey</target>
       </segment>
     </unit>
+    <unit id="elZ0zxc" name="Liste vergangener Namen löschen">
+      <notes>
+        <note category="german">Liste vergangener Namen löschen</note>
+        <note category="from">twig:///templates/ajax/admin/users/account.html.twig</note>
+      </notes>
+      <segment>
+        <source>Liste vergangener Namen löschen</source>
+        <target>Delete player name history</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
