--- a/translations/gazette+intl-icu.es.xlf
+++ b/translations/gazette+intl-icu.es.xlf
@@ -3266,7 +3266,7 @@
       </notes>
       <segment>
         <source>Unsere Späher berichten, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</source>
-        <target>Unsere Späher berichten, dass sie einen Mysteriösen Fremden in der Umgebung der Stadt gesichtet haben...</target>
+        <target>Nuestros vigías informan que han visto a un Extraño Misterioso rondando por el pueblo...</target>
       </segment>
     </unit>
   </file>
