ES #2139 Translation (no results)

--- a/translations/global+intl-icu.es.xlf
+++ b/translations/global+intl-icu.es.xlf
@@ -4285,11 +4285,11 @@
       <notes>
         <note category="german">Es wurden keine Dokumente gefunden, die deiner Suchanfrage entsprechen.</note>
         <note category="from">twig:///templates/ajax/help/shell.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Es wurden keine Dokumente gefunden, die deiner Suchanfrage entsprechen.</source>
-        <target>Es wurden keine Dokumente gefunden, die deiner Suchanfrage entsprechen.</target>
+        <target>No pudimos encontrar nada que coincidiera con tu búsqueda.</target>
       </segment>
     </unit>
     <unit id="KcsH3SB" name="Schon gewusst?">
