--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4778,55 +4778,55 @@
       <notes>
         <note category="german">Diese Stadt hat folgende Einschränkungen:</note>
         <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Diese Stadt hat folgende Einschränkungen:</source>
-        <target>Diese Stadt hat folgende Einschränkungen:</target>
+        <target>Este pueblo tiene las siguientes restricciones:</target>
       </segment>
     </unit>
     <unit id="4Gjif4f" name="Ausschluss aus dem Ranking">
       <notes>
         <note category="german">Ausschluss aus dem Ranking</note>
         <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Ausschluss aus dem Ranking</source>
-        <target>Ausschluss aus dem Ranking</target>
+        <target>Sin participación en la clasificación</target>
       </segment>
     </unit>
     <unit id="gAN.vX0" name="Löschen der Auszeichnungen">
       <notes>
         <note category="german">Löschen der Auszeichnungen</note>
         <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Löschen der Auszeichnungen</source>
-        <target>Löschen der Auszeichnungen</target>
+        <target>Eliminación de distinciones</target>
       </segment>
     </unit>
     <unit id="0kcps11" name="Löschen der Seelenpunkte">
       <notes>
         <note category="german">Löschen der Seelenpunkte</note>
         <note category="from">twig:///templates/ajax/soul/view_town_content.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Löschen der Seelenpunkte</source>
-        <target>Löschen der Seelenpunkte</target>
+        <target>Eliminación de Puntos de Alma</target>
       </segment>
     </unit>
     <unit id="QzJ.qzA" name="Die Seelenpunkte dieser Stadt wurden gelöscht">
       <notes>
         <note category="german">Die Seelenpunkte dieser Stadt wurden gelöscht</note>
         <note category="from">twig:///templates/ajax/soul/town_list.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Die Seelenpunkte dieser Stadt wurden gelöscht</source>
-        <target>Die Seelenpunkte dieser Stadt wurden gelöscht</target>
+        <target>Se han eliminado los puntos de alma otorgados en este pueblo</target>
       </segment>
     </unit>
     <unit id="PqTGH.B" name="Umfragen">
