--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -23209,5 +23209,16 @@ cette violente opération...]]></target>
         <target>de voter au bureau électoral</target>
       </segment>
     </unit>
+    <unit id="EIB6zP8" name="Anzahl der Tage, die du als Einwohner gespielt hast.">
+      <notes>
+        <note category="german">Anzahl der Tage, die du als Einwohner gespielt hast.</note>
+        <note category="from">db://PictoPrototype</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Anzahl der Tage, die du als Einwohner gespielt hast.</source>
+        <target>Anzahl der Tage, die du als Einwohner gespielt hast.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
