--- a/translations/global+intl-icu.fr.xlf
+++ b/translations/global+intl-icu.fr.xlf
@@ -4308,22 +4308,22 @@
       <notes>
         <note category="german">Schon gewusst?</note>
         <note category="from">twig:///templates/ajax/soul/future.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Schon gewusst?</source>
-        <target>Schon gewusst?</target>
+        <target>Le saviez-vous?</target>
       </segment>
     </unit>
     <unit id="QC.do8z" name="Umfrage starten">
       <notes>
         <note category="german">Umfrage starten</note>
         <note category="from">twig:///templates/ajax/ajax.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Umfrage starten</source>
-        <target>Umfrage starten</target>
+        <target>Répondre au sondage</target>
       </segment>
     </unit>
   </file>
