--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -4911,11 +4911,11 @@
       <notes>
         <note category="german">Alle Gegenstände aller Bürger ablegen</note>
         <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Alle Gegenstände aller Bürger ablegen</source>
-        <target>Alle Gegenstände aller Bürger ablegen</target>
+        <target>Soltar TODOS los objetos de TODOS los habitantes</target>
       </segment>
     </unit>
     <unit id="qtaAXm5" name="Auszeichnungen wiederherstellen">
