--- a/translations/help+intl-icu.en.xlf
+++ b/translations/help+intl-icu.en.xlf
@@ -104,7 +104,7 @@
     <unit id="8Ld23ql" name="Wildes Campen">
       <notes>
         <note category="german">Wildes Campen</note>
-        <note category="from">twig:///templates/ajax/help/extreme_camping.html.twig;twig:///templates/ajax/help/shell.html.twig;twig:///templates/ajax/help/the_night.html.twig;twig:///templates/seo/help.html.twig</note>
+        <note category="from">twig:///templates/ajax/game/beyond/desert.html.twig;twig:///templates/ajax/help/extreme_camping.html.twig;twig:///templates/ajax/help/shell.html.twig;twig:///templates/ajax/help/the_night.html.twig;twig:///templates/seo/help.html.twig</note>
       </notes>
       <segment>
         <source>Wildes Campen</source>
@@ -364,7 +364,7 @@
     <unit id="mVINzuJ" name="Der Angriff der Zombiehorde">
       <notes>
         <note category="german">Der Angriff der Zombiehorde</note>
-        <note category="from">twig:///templates/ajax/help/daily_upgrades.html.twig;twig:///templates/ajax/help/shell.html.twig;twig:///templates/ajax/help/the_attack_of_the_hordes.html.twig;twig:///templates/seo/help.html.twig</note>
+        <note category="from">twig:///templates/ajax/help/daily_upgrades.html.twig;twig:///templates/ajax/help/shell.html.twig;twig:///templates/ajax/help/the_attack_of_the_hordes.html.twig;twig:///templates/ajax/public/maintenance_attack.html.twig;twig:///templates/seo/help.html.twig</note>
       </notes>
       <segment>
         <source>Der Angriff der Zombiehorde</source>
